src/tests/ci/assignment_2_types_variables/valid/02_assignment.c
int main() {
    int x = 1;
    x = 5;
    return x;
}
