src/tests/ci/assignment_2_types_variables/invalid_semantic/08_assign_to_const.c
int main() {
    const int x = 5;
    x = 6;
    return x;
}
